chat con analisis agregado